worked on finishing touches and used mongoose
