# routes/swagger.js
@@ -1,8 +1,9 @@
 const router = require('express').Router();
 const swaggerUi = require('swagger-ui-express');
 const swaggerDocument = require('../swagger.json');
+const { requiresAuth } = require('express-openid-connect');
 
-router.use('/api-docs', swaggerUi.serve);
+router.use('/api-docs', requiresAuth(), swaggerUi.serve);
 router.get('/api-docs', swaggerUi.setup(swaggerDocument));
 
 module.exports = router;
